--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,11 @@
   border: 10px solid red;
   position: absolute;
   top: 0px;
-  right: 80%;
+  right: 75%;
   bottom: 0px;
   left: 0px;
   margin: 0px;
+  padding: 10px 10px 10px 10px;
 }
 
 #viewer-container {
@@ -18,7 +19,7 @@
   top: 0px;
   right: 0px;
   bottom: 0px;
-  left: 20%;
+  left: 25%;
   margin: 0px;
 }
 
